@@ -4,3 +4,5 @@ ColorSelectedRowsCommand.choose.color=Choose color
 GotoColorMenuController.goto.color=Go to color
 GotoColorMenuController.row.number=Row number {0}
 GotoColorMenuController.no.colored.rows=No rows colored
+
+ColorSelectedRowsCommand.color.selected.rows=Color selected rows
